fix z-index for navigation and search btn in gov page

--- a/src/content/styles/global.css
+++ b/src/content/styles/global.css
@@ -63,7 +63,7 @@ h1 {
     background-color: rgb(64, 37, 214);
     width: 100%;
     position: fixed;
-    z-index: 10;
+    z-index: 1;
 }
 
 .nav--item {
