--- a/src/modules/gov/style.css
+++ b/src/modules/gov/style.css
@@ -1,3 +1,7 @@
 .search__container {
     max-width: 600px;
 }
+
+.input-group .btn {
+    z-index: 0;
+}
